--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="17" />
+<!--     <uses-permission android:name="android.permission.CAMERA"/> -->
 
     <application
         android:allowBackup="true"
